<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">


    <FrameLayout
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tablayout"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/tablayout"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <com.google.android.material.tabs.TabLayout

        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tabIconTint="@color/colorPrimary"
        app:tabBackground="@color/white"
        app:tabIndicatorColor="@color/colorPrimaryDark">

        <com.google.android.material.tabs.TabItem

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/explore"
            android:text="@string/explore" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:icon="@drawable/wallet"
            android:text="@string/wallet" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/profile"
            android:text="@string/my_profile" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/more"
            android:text="@string/more" />
    </com.google.android.material.tabs.TabLayout>
</RelativeLayout>